# Vector_Sigma

./: Dockerfile  Makefile  README.md  pyproject.toml
vector_sigma/: __init__.py  exchange.py  front_end.py  settings.py  signal.py
