[project]
name = "vector-sigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioconsole>=0.8.1",
    "aiosqlite>=0.21.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "vector_sigma:run"
